邮件模版单一项目进度：完成一半

--- a/src/单一项目.html
+++ b/src/单一项目.html
@@ -8,6 +8,11 @@
 </head>
 
 <body>
+  <!--
+    http://7xjt0w.com2.z0.glb.qiniucdn.com/1488184412230  banner1
+    http://7xjt0w.com2.z0.glb.qiniucdn.com/1488184437692  banner2
+    http://7xjt0w.com2.z0.glb.qiniucdn.com/1488184456320  banner3
+  -->
   <!--头-->
   <table cellpadding="0" cellspacing="0" border="0" width="680" align="center">
     <tr>
@@ -24,17 +29,13 @@
   <!--内容-->
   <table cellpadding="0" cellspacing="0" border="0" width="680" align="center">
     <tr>
-      <td>
-        <div>
-          <img src="" alt="" style="display: block;height: 245px;background-color: orange">
-        </div>
+      <td style="height: 245px;">
+        <img src="http://7xjt0w.com2.z0.glb.qiniucdn.com/1488184412230" alt="">
       </td>
     </tr>
     <tr>
-      <td>
-        <div>
-          <img src="" alt="" style="display: block;height: 65px;background-color: red">
-        </div>
+      <td style="height: 65px;">
+        <img src="http://7xjt0w.com2.z0.glb.qiniucdn.com/1488184437692" alt="">
       </td>
     </tr>
   </table>
@@ -51,7 +52,7 @@
       <td style="width:2%"></td>
       <td style="padding-top: 5%;">
         <center>
-          <img src="#" alt="" style="width: 202px;height: 115px;">
+          <img src="http://7xloiw.com2.z0.glb.qiniucdn.com/huangqiuyue1461141140117" alt="" width="202" height="115px;">
         </center>
       </td>
     </tr>
@@ -59,56 +60,60 @@
   <table cellpadding="0" cellspacing="0" border="0" width="680" align="center">
     <tr>
       <td>
-        <img src="#" alt="" style="display:block;height: 50px;background-color: dimgrey;">
+        <img src="http://7xjt0w.com2.z0.glb.qiniucdn.com/1488184456320" alt="">
       </td>
     </tr>
   </table>
-  <!--推荐展会-->
-    <table cellpadding="0" cellspacing="0" border="0" width="680" align="center">
+  <!--现场活动-->
+  <table cellpadding="0" cellspacing="0" border="0" width="680" align="center">
+    <tr class="space">
+      <td height="10px" align="left">
+        <div width="1" class="space" style="font-size: 10px;line-height: 10px;">&nbsp;</div>
+      </td>
+    </tr>
     <tr>
       <td width="680">
         <div align="center" style="font-size: 13px;font-weight: 600;">现场活动</div>
       </td>
     </tr>
-    <tr>
-      <td style="border-top:1px solid #ededed;padding-top: 4px;padding-bottom:4px;font-size: 14px;line-height: 22px;color: #777777;"></td>
+    <tr class="space">
+      <td height="10px" align="left">
+        <div width="1" class="space" style="font-size: 10px;line-height: 10px;">&nbsp;</div>
+      </td>
     </tr>
   </table>
   <table cellpadding="0" cellspacing="0" border="0" width="680" align="center">
     <tr>
-      <td>
-        <div style="display:inline-block;width: 34px;height: 10px"></div>
-        <div style="display:inline-block;width: 186px;font-size: 12px;margin-bottom: 4px;margin-right: 10px;padding-left: 6px;padding-top: 6px;background-color: #EEEEEE">
-          <img src="http://7xloiw.com2.z0.glb.qiniucdn.com/huangqiuyue1461141140117" alt="酒店" style="display:block;width: 180px;">
-          <div style="text-align:center;text-overflow:ellipsis;overflow-x: hidden;white-space: nowrap;padding-left: 8px;padding-right: 8px;margin:0 auto;">
-            <div>横幅</div>
-            <div style="width: 80px;height: 1px;background-color: #cccccc;margin-left: auto;margin-right: auto;margin-top: 4px;margin-bottom: 4px;"></div>
-            <a href="http://www.baidu.com" style="width: 100px;margin-left: auto;margin-right: auto;margin-top: 10px;text-decoration: none;color: #FEA80A;display: block;border-color: #FEA80A;border-width: 1px;border-style: solid;">
-              查看详情
-            </a>
-          </div>
-        </div>
-        <div style="display:inline-block;width: 186px;font-size: 12px;margin-bottom: 4px;margin-right: 10px;padding-left: 6px;padding-top: 6px;background-color: #EEEEEE">
-          <img src="http://7xloiw.com2.z0.glb.qiniucdn.com/huangqiuyue1461141140117" alt="酒店" style="display:block;width: 180px;">
-          <div style="text-align:center;text-overflow:ellipsis;overflow-x: hidden;white-space: nowrap;padding-left: 8px;padding-right: 8px;margin:0 auto;">
-            <div>横幅</div>
-            <div style="width: 80px;height: 1px;background-color: #cccccc;margin-left: auto;margin-right: auto;margin-top: 4px;margin-bottom: 4px;"></div>
-            <a href="http://www.baidu.com" style="width: 100px;margin-left: auto;margin-right: auto;margin-top: 10px;text-decoration: none;color: #FEA80A;display: block;border-color: #FEA80A;border-width: 1px;border-style: solid;">
-              查看详情
-            </a>
-          </div>
-        </div>
-        <div style="display:inline-block;width: 186px;font-size: 12px;margin-bottom: 4px;margin-right: 10px;padding-left: 6px;padding-top: 6px;background-color: #EEEEEE">
-          <img src="http://7xloiw.com2.z0.glb.qiniucdn.com/huangqiuyue1461141140117" alt="酒店" style="display:block;width: 180px;">
-          <div style="text-align:center;text-overflow:ellipsis;overflow-x: hidden;white-space: nowrap;padding-left: 8px;padding-right: 8px;margin:0 auto;">
-            <div>横幅</div>
-            <div style="width: 80px;height: 1px;background-color: #cccccc;margin-left: auto;margin-right: auto;margin-top: 4px;margin-bottom: 4px;"></div>
-            <a href="http://www.baidu.com" style="width: 100px;margin-left: auto;margin-right: auto;margin-top: 10px;text-decoration: none;color: #FEA80A;display: block;border-color: #FEA80A;border-width: 1px;border-style: solid;">
-              查看详情
-            </a>
-          </div>
-        </div>
-        <div style="display:inline-block;width: 20px;height: 20px"></div>
+      <td width="2%">
+        <div width="1" class="space" style="font-size: 10px;line-height: 10px;">&nbsp;</div>
+      </td>
+      <td width="30%" valign="middle">
+        <table cellpadding="0" cellspacing="0" border="0" width="100%" bgColor="#EEEEEE">
+          <tr>
+            <td>
+              <img src="http://7xjt0w.com2.z0.glb.qiniucdn.com/chenguijie1451893772292" alt="" style="width: 180px;">
+            </td>
+          </tr>
+          <tr>
+            <td align="center">
+              横幅
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <div width="1" style="font-size:1px;line-height: 1px;background-color: #777777;">&nbsp;</div>
+            </td>
+          </tr>
+        </table>
+      </td>
+      <td width="50%" valign="middle">
+        <table cellpadding="0" cellspacing="0" border="0" width="100%">
+          <tr>
+            <td>
+              <span>蛤蛤蛤蛤</span>
+            </td>
+          </tr>
+        </table>
       </td>
     </tr>
   </table>
@@ -119,23 +124,86 @@
 
 
   <table cellpadding="0" cellspacing="0" border="0" width="680" align="center">
+    <tr class="space">
+      <td height="10px" align="left">
+        <div width="1" class="space" style="font-size: 10px;line-height: 10px;">&nbsp;</div>
+      </td>
+    </tr>
     <tr>
       <td width="680">
         <div align="center" style="font-size: 13px;font-weight: 600;">展会新闻</div>
       </td>
     </tr>
+    <tr class="space">
+      <td height="10px" align="left">
+        <div width="1" class="space" style="font-size: 10px;line-height: 10px;">&nbsp;</div>
+      </td>
+    </tr>
     <tr>
       <td>
-        <img src="#" alt="" style="display:inline-block;vertical-align:bottom;width: 222px;height: 111px;background-color: darkgreen;">
-        <img src="#" alt="" style="display:inline-block;vertical-align:bottom;width: 222px;height: 111px;background-color: darkgreen;">
-        <img src="#" alt="" style="display:inline-block;vertical-align:bottom;width: 222px;height: 111px;background-color: darkgreen;">
+        <img src="http://7xjt0w.com2.z0.glb.qiniucdn.com/linguidan1467366923815" alt="" style="display:inline-block;vertical-align:bottom;width: 222px;height: 111px;">
+        <img src="http://7xjt0w.com2.z0.glb.qiniucdn.com/chenguijie1466155731298" alt="" style="display:inline-block;vertical-align:bottom;width: 222px;height: 111px;">
+        <img src="http://7xjt0w.com2.z0.glb.qiniucdn.com/zhongyinling1468916841880" alt="" style="display:inline-block;vertical-align:bottom;width: 222px;height: 111px;">
+      </td>
+    </tr>
+  </table>
+  <table cellpadding="0" cellspacing="0" border="0" width="680" align="center">
+    <tr class="space">
+      <td height="10px" align="left">
+        <div width="1" class="space" style="font-size: 10px;line-height: 10px;">&nbsp;</div>
+      </td>
+    </tr>
+    <tr>
+      <td width="680">
+        <div align="center" style="font-size: 13px;font-weight: 600;">推荐重点展商</div>
+      </td>
+    </tr>
+    <tr class="space">
+      <td height="10px" align="left">
+        <div width="1" class="space" style="font-size: 10px;line-height: 10px;">&nbsp;</div>
       </td>
     </tr>
   </table>
   <table cellpadding="0" cellspacing="0" border="0" width="680" align="center">
     <tr>
+      <td>
+        <div style="display:inline-block;width: 221px;font-size: 12px;margin-bottom: 4px;">
+          <div style="padding-top: 4px;"></div>
+          <img src="http://7xjt0w.com2.z0.glb.qiniucdn.com/1483582394926" alt="头像" style="display:block;width: 50px;height: 50px;margin:0 auto;border-radius: 25px;">
+          <div style="text-align:center;padding-left: 8px;padding-right: 8px;font-size: 14px;font-weight: 600;">青岛欧克斯新型建材有限公司大城分厂</div>
+          <div style="text-align:center;">主营产品：炜特五金塑胶制品</div>
+        </div>
+        <div style="display:inline-block;width: 221px;font-size: 12px;margin-bottom: 4px;">
+          <div style="padding-top: 4px;"></div>
+          <img src="http://7xjt0w.com2.z0.glb.qiniucdn.com/1483582394926" alt="头像" style="display:block;width: 50px;height: 50px;margin:0 auto;border-radius: 25px;">
+          <div style="text-align:center;padding-left: 8px;padding-right: 8px;font-size: 14px;font-weight: 600;">南京强固新型建材有限公司(沈先生)</div>
+          <div style="text-align:center;">主营产品：上海振春粉体设备</div>
+        </div>
+        <div style="display:inline-block;width: 221px;font-size: 12px;margin-bottom: 4px;">
+          <div style="padding-top: 4px;"></div>
+          <img src="http://7xjt0w.com2.z0.glb.qiniucdn.com/1483582394926" alt="头像" style="display:block;width: 50px;height: 50px;margin:0 auto;border-radius: 25px;">
+          <div style="text-align:center;padding-left: 8px;padding-right: 8px;font-size: 14px;font-weight: 600;">广州市白云区松洲禾力广告器材厂</div>
+          <div style="text-align:center;">主营产品：无锡市金亿达防爆电机</div>
+        </div>
+      </td>
+    </tr>
+  </table>
+
+  <!--推荐参展商 E-->
+  <table cellpadding="0" cellspacing="0" border="0" width="680" align="center">
+    <tr class="space">
+      <td height="10px" align="left">
+        <div width="1" class="space" style="font-size: 10px;line-height: 10px;">&nbsp;</div>
+      </td>
+    </tr>
+    <tr>
       <td width="680">
         <div align="center" style="font-size: 13px;font-weight: 600;">推荐重点展商</div>
+      </td>
+    </tr>
+    <tr class="space">
+      <td height="10px" align="left">
+        <div width="1" class="space" style="font-size: 10px;line-height: 10px;">&nbsp;</div>
       </td>
     </tr>
     <tr>
@@ -145,25 +213,67 @@
   <table cellpadding="0" cellspacing="0" border="0" width="680" align="center">
     <tr>
       <td>
-        <div style="display:inline-block;width: 221px;border: 1px solid #ccc;font-size: 12px;margin-bottom: 4px;">
-          <div style="padding-top: 4px;"></div>
-          <img src="http://7xjt0w.com2.z0.glb.qiniucdn.com/1483582394926" alt="头像" style="display:block;width: 50px;height: 50px;margin:0 auto;border-radius: 25px;">
-          <div style="text-align:center;">王大波</div>
-          <div style="text-align:center;text-overflow:ellipsis;overflow-x: hidden;white-space: nowrap;padding-left: 8px;padding-right: 8px;">广东惠利普路桥信息工程有限公司</div>
-          <div style="text-align:center;">中国 广东</div>
-          <a href="#" style="color: #ffffff;text-decoration: none;"><div style="height: 30px;line-height:30px;background-color: #F48800;text-align: center;">约见</div></a>
+        <div style="display:inline-block;width:128px;margin-right: 4px;">
+          <div style="height: 88px;border-width: 1px;border-color: #cccccc;border-style: solid;">
+            <img src="http://7xjt0w.com2.z0.glb.qiniucdn.com/huangqiuyue1460529577030" alt="" style="width: 98px;height: 80px;display: block;margin-left: auto;margin-right: auto;margin-top: 4px;">
+          </div>
+          <div style="font-size: 12px;height: 24px;line-height: 1.5;">
+            2016年德国汉堡国际餐饮及酒店设备博览会
+          </div>
+        </div>
+        <div style="display:inline-block;width:128px;margin-right: 4px">
+          <div style="height: 88px;border-width: 1px;border-color: #cccccc;border-style: solid;">
+            <img src="http://7xloiw.com2.z0.glb.qiniucdn.com/chenguijie1461834428063" alt="" style="width: 98px;height: 80px;display: block;margin-left: auto;margin-right: auto;margin-top: 4px;">
+          </div>
+          <div style="font-size: 12px;height: 24px;line-height: 1.5;">
+            2016年德国汉堡国际餐饮及酒店设备博览会
+          </div>
+        </div>
+        <div style="display:inline-block;width:128px;margin-right: 4px">
+          <div style="height: 88px;border-width: 1px;border-color: #cccccc;border-style: solid;">
+            <img src="http://7xloiw.com2.z0.glb.qiniucdn.com/ouyangjiaxing1463470229429" alt="" style="width: 98px;height: 80px;display: block;margin-left: auto;margin-right: auto;margin-top: 4px;">
+          </div>
+          <div style="font-size: 12px;height: 24px;line-height: 1.5;">
+            2016年德国汉堡国际餐饮及酒店设备博览会
+          </div>
+        </div>
+        <div style="display:inline-block;width:128px;margin-right: 4px">
+          <div style="height: 88px;border-width: 1px;border-color: #cccccc;border-style: solid;">
+            <img src="http://7xjt0w.com2.z0.glb.qiniucdn.com/lihuali1464676313399" alt="" style="width: 98px;height: 80px;display: block;margin-left: auto;margin-right: auto;margin-top: 4px;">
+          </div>
+          <div style="font-size: 12px;height: 24px;line-height: 1.5;">
+            2016年德国汉堡国际餐饮及酒店设备博览会
+          </div>
+        </div>
+        <div style="display:inline-block;width:128px;margin-right: 4px">
+          <div style="height: 88px;border-width: 1px;border-color: #cccccc;border-style: solid;">
+            <img src="http://7xjt0w.com2.z0.glb.qiniucdn.com/137262602411470296546396?imageMogr2/thumbnail/607x410/crop/!607x300.3711340206185a0a0" alt="" style="width: 98px;height: 80px;display: block;margin-left: auto;margin-right: auto;margin-top: 4px;">
+          </div>
+          <div style="font-size: 12px;height: 24px;line-height: 1.5;">
+            2016年德国汉堡国际餐饮及酒店设备博览会
+          </div>
         </div>
       </td>
     </tr>
   </table>
-  <!--推荐参展商 E-->
   <!--底-->
   <table cellpadding="0" cellspacing="0" border="0" width="680" align="center">
     <tr>
       <td style="border-top: 1px solid #ededed;"></td>
     </tr>
+    <tr class="space">
+      <td height="10px" align="left">
+        <div width="1" class="space" style="font-size: 10px;line-height: 10px;">&nbsp;</div>
+      </td>
+    </tr>
+    <tr>
+      <td style="font-size:12px;">
+        <div align="center">了解更多展会详情</div>
+        <div align="center">请登录<a href="http://www.10000show.com" style="text-decoration: none;color: #000;">WWW.10000show.com</a></div>
+      </td>
+    </tr>
   </table>
-  <table cellpadding="0" cellspacing="0" border="0" width="680" align="center">
+  <!--<table cellpadding="0" cellspacing="0" border="0" width="680" align="center">
     <tr>
       <td align="right" width="280">
         <img style="display:block;width:70px;height:70px;margin-top:10px;" src="http://7xjt0w.com2.z0.glb.qiniucdn.com/1483496987927" alt="扫码关注">
@@ -173,11 +283,11 @@
         <div>找全球知名企业、展会</div>
       </td>
     </tr>
-  </table>
+  </table>-->
   <table cellpadding="0" cellspacing="0" border="0" width="680" align="center">
-    <tr>
-      <td>
-        <div style="padding-top: 10px;"></div>
+    <tr class="space">
+      <td height="10px" align="left">
+        <div width="1" class="space" style="font-size: 10px;line-height: 10px;">&nbsp;</div>
       </td>
     </tr>
   </table>
@@ -185,6 +295,7 @@
     <tr>
       <td align="center">
         <font size="2" color="#5e5e5e" style="line-height: 20px;">
+          退订|帮助<br>
           您已设置接受<a href="http://www.10000show.cn" target="_blank" style="color: #FAAA23;">万秀网</a>邮件 <br>
           咨询热线：400-6004436 <br>
           Copyright©  广州万秀网络科技有限公司2016版权所有
